# runsvdir

./: Cargo.toml
.github/workflows/: clippy.yml  fmt.yml  tests.yml
src/: lib.rs  main.rs  shash.rs  step.rs  stepper.rs
test_res/b/: run
