[package]
name = "runsvdir"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
base64ct = { version = "1", features = ["std"] }
clap = { version = "4", features = ["derive"] }
nix = { version = "0.29", features = ["signal"] }
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
